// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Testing snapshot for Attentive's upsertUserAttributes destination action: all fields 1`] = `
Object {
  "properties": Object {
    "testType": "%vhd63GyrzEnsdNhru",
  },
  "user": Object {
    "email": "ni@viltas.cf",
    "externalIdentifiers": Object {
      "clientUserId": "%vhd63GyrzEnsdNhru",
    },
    "phone": "%vhd63GyrzEnsdNhru",
  },
}
`;

exports[`Testing snapshot for Attentive's upsertUserAttributes destination action: required fields 1`] = `
Object {
  "properties": Object {
    "testType": "%vhd63GyrzEnsdNhru",
  },
  "user": Object {
    "externalIdentifiers": Object {
      "customIdentifiers": Object {
        "userId": "testuserid",
      },
    },
  },
}
`;
